# fastapi_template

./: cookiecutter.json  readme.md
{{cookiecutter.repo_name}}/: .gitignore  Procfile  README.md  di_config.yaml  mission_control.py  pyproject.toml  setup.cfg
{{cookiecutter.repo_name}}/.github/workflows/: autoformating.yml  deploy.yml  pytest.yml
{{cookiecutter.repo_name}}/tests/: conftest.py
{{cookiecutter.repo_name}}/tests/users/: test_controller.py
{{cookiecutter.repo_name}}/{{cookiecutter.project_name}}/: __init__.py  main.py
{{cookiecutter.repo_name}}/{{cookiecutter.project_name}}/core/: api_error.py  binding.py  config.py  event_handlers.py  router.py
{{cookiecutter.repo_name}}/{{cookiecutter.project_name}}/core/heartbeat/: controller.py
{{cookiecutter.repo_name}}/{{cookiecutter.project_name}}/misc/sql_database/: database.py
{{cookiecutter.repo_name}}/{{cookiecutter.project_name}}/users/: controller.py  dto.py  exceptions.py  model.py  repository.py  service.py
